Bug 1218918 - Issues with devtools "work offline" when connectivity changes r=mcmanus,dao * Flip the network.offline-mirrors-connectivity pref, so that ioservice.offline means the same as devtools work offline * ioService.manageOfflineStatus shouldn't be changed when going to offline mode. * Add logging to nsIOService in order to track offline/connectivity issues